@@ -292,6 +292,9 @@ Release 2.8.0 - UNRELEASED
     YARN-3136. Fixed a synchronization problem of
     AbstractYarnScheduler#getTransferredContainers. (Sunil G via jianhe)
 
+    YARN-3495. Confusing log generated by FairScheduler.
+    (Brahma Reddy Battula via ozawa)
+
 Release 2.7.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
